--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,59 @@
-.header {
-  color: darkcyan;
+.toolbar {
+  display: flex;
+  color: slateblue;
   font-weight: bold;
-  text-size-adjust: 28px;
+  font-size: 25px;
+  margin-bottom: 7%;
+  margin-left: 15px;
+}
+a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: black;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+}
+.greeting {
+  margin-top: 35%;
+  font-weight: bold;
+  font-size: 48px;
+  margin-bottom: 10px;
+  color: black;
+  margin-left: 15px;
+}
+.descript {
+  font-size: 20px;
+  color: black;
+  margin-left: 15px;
+}
+.back-img{
+  position: absolute;
+  width: 100%;
+  height: 587.15px;
+  top: 104px;
+}
+.btn {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 15px;
+  background-color: transparent;
+  left: 418px;
+  border: none;
+}
+.btn:hover {
+  enable-background: white;
+  background-color: slateblue;
+}
+.socials {
+  margin-bottom: 15px;
+}
+.socials-div {
+  margin-left: 15px;
+}
+.nav-img {
+  position: absolute;
+  width: 470px;
 }
