--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
 }
 
 .back-img {
+  background-image: url('images\header-shapes mobile.png');
   position: absolute;
   width: 100%;
   height: 587.15px;
@@ -44,8 +45,8 @@ body {
   position: absolute;
   width: 24px;
   height: 24px;
-  top: 15px;
   background-color: transparent;
+  top: 15px;
   left: 418px;
   border: none;
 }
@@ -57,6 +58,8 @@ body {
 
 .socials {
   margin-bottom: 15px;
+  border: none;
+  background-color: white;
 }
 
 .socials-div {
@@ -66,4 +69,54 @@ body {
 .nav-img {
   position: absolute;
   width: 470px;
+}
+
+ul {
+  border: none;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 16px;
+  width: 117px;
+  height: 24px;
+}
+
+.twitter {
+  position: absolute;
+  left: 6%;
+  right: 88.27%;
+  top: 69%;
+  bottom: 18.88%;
+}
+
+.github {
+  position: absolute;
+  left: 14%;
+  right: 57.07%;
+  top: 68.8%;
+  bottom: 18.87%;
+}
+
+.gmail {
+  position: absolute;
+  left: 12%;
+  right: 67.2%;
+  top: 69%;
+  bottom: 19.21%;
+}
+
+.linkedin {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 63px;
+  top: 509px;
+}
+
+li {
+  list-style-type: none;
 }
