--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px;
+  padding: 0;
   gap: 16px;
   width: 117px;
   height: 24px;
