--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ ul {
   bottom: 18.87%;
   width: 25px;
   height: 25px;
+  list-style-type: none;
 }
 
 .gmail {
@@ -104,6 +105,7 @@ ul {
   bottom: 19.21%;
   width: 25px;
   height: 25px;
+  list-style-type: none;
 }
 
 .linkedin {
@@ -113,9 +115,6 @@ ul {
   height: 20px;
   left: 63px;
   top: 73.4%;
-}
-
-li {
   list-style-type: none;
 }
 
@@ -125,4 +124,253 @@ li {
   width: 470px;
   height: 50px;
   background-size: cover;
+}
+
+.work {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 114px 24px;
+  gap: 88px;
+  position: absolute;
+  width: 426px;
+  height: 2788px;
+  left: 0px;
+  top: 718px;
+  background-color: whitesmoke;
+}
+
+.tonic-1 {
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  gap: 12px;
+  width: 327px;
+  height: 552px;
+  box-sizing: border-box;
+  border: 1px solid #DFE1E6;
+  border-radius: 16px;
+  background-color: white;
+}
+
+.tonic-img {
+  background-image: url('images/Tonic.png');
+  width: 295px;
+  height: 220px;
+}
+
+.text-box {
+  width: 295px;
+  height: 288px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+}
+
+.tonic-title {
+  margin: 0px;
+  font-size: 32px;
+}
+
+.info {
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  padding-left: 0px;
+  margin: 0px;
+}
+
+#client {
+  font-weight: bold;
+  list-style-type: none;
+  padding: 8px 0px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin-right: 10px;
+}
+
+#role {
+  padding: 8px 0px;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin: 0px 10px;
+}
+
+#date {
+  padding: 8px 0px;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  margin: 0px 10px;
+}
+
+.tags-ul {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  gap: 8px;
+  padding: 0px;
+}
+
+.html-tag {
+  background: #EBEBFF;
+  border-radius: 8px;
+  padding: 4px 12px;
+  width: 30px;
+  color: blue;
+}
+
+.css-tag {
+  background: #EBEBFF;
+  border-radius: 8px;
+  padding: 4px 12px;
+  width: 20px;
+  color: blue;
+}
+
+.javaScript-tag {
+  background: #EBEBFF;
+  border-radius: 8px;
+  padding: 4px 12px;
+  width: 66px;
+  color: blue;
+}
+
+.project-btn {
+  background-color: white;
+  border-radius: 8px;
+  border: 1px solid #6070FF;
+  color: blue;
+  padding: 12px;
+  font-weight: 700;
+  width: 124px;
+  height: 48px;
+  top: 20px;
+}
+
+.project-btn:hover {
+  enable-background: white;
+  background-color: slateblue;
+}
+
+.multi-img {
+  background-image: url('images/Multi-post.png');
+  width: 295px;
+  height: 220px;
+}
+
+.tonic2-img {
+  background-image: url('images/Tonic2.png');
+  width: 295px;
+  height: 220px;
+}
+
+.multi2-img {
+  background-image: url('images/Multi-post2.png');
+  width: 295px;
+  height: 220px;
+}
+
+.about-myself {
+  position: absolute;
+  width: 474px;
+  height: 1263px;
+  top: 3680px;
+  border-top-right-radius: 60px;
+  background-color: white;
+}
+
+.about-me {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+  width: 327px;
+  height: 409px;
+  padding-left: 15px;
+}
+
+.about-title {
+  font-size: 40px;
+}
+
+.about-descript {
+  font-size: 20px;
+}
+
+.social-links {
+  display: flex;
+  align-items: flex-start;
+  list-style-type: none;
+  gap: 8px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.linkedin2 {
+  padding: 4px 12px;
+  width: 30px;
+}
+
+.gmail2 {
+  padding: 6px 12px;
+  width: 30px;
+}
+
+.github2 {
+  padding: 4px 12px;
+  width: 30px;
+}
+
+.resume-btn {
+  background-color: white;
+  border-radius: 8px;
+  border: 1px solid #6070FF;
+  color: blue;
+  padding: 12px;
+  font-weight: 700;
+  width: 124px;
+  height: 48px;
+  top: 20px;
+}
+
+.resume-btn:hover {
+  enable-background: white;
+  background-color: slateblue;
+}
+
+.skill-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 15px;
+  width: 327px;
+  height: 70px;
+  margin-top: 100px;
+}
+
+#skills {
+  width: 327px;
+  height: 72px;
+}
+
+option {
+  width: 303px;
+  height: 66.72px;
+}
+
+.skill-list2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 15px;
+  width: 327px;
+  height: 70px;
 }
