--- a/styles.css
+++ b/styles.css
@@ -135,13 +135,12 @@ ul {
   position: absolute;
   width: 426px;
   height: 2788px;
-  left: 0px;
+  left: 0;
   top: 718px;
   background-color: whitesmoke;
 }
 
 .tonic-1 {
-  display: flex;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -150,7 +149,7 @@ ul {
   width: 327px;
   height: 552px;
   box-sizing: border-box;
-  border: 1px solid #DFE1E6;
+  border: 1px solid #dfe1e6;
   border-radius: 16px;
   background-color: white;
 }
@@ -167,12 +166,12 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px;
+  padding: 0;
   gap: 12px;
 }
 
 .tonic-title {
-  margin: 0px;
+  margin: 0;
   font-size: 32px;
 }
 
@@ -180,14 +179,14 @@ ul {
   font-size: 13px;
   display: flex;
   align-items: center;
-  padding-left: 0px;
-  margin: 0px;
+  padding-left: 0;
+  margin: 0;
 }
 
 #client {
   font-weight: bold;
   list-style-type: none;
-  padding: 8px 0px;
+  padding: 8px 0;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -195,19 +194,19 @@ ul {
 }
 
 #role {
-  padding: 8px 0px;
+  padding: 8px 0;
   flex: none;
   order: 1;
   flex-grow: 0;
-  margin: 0px 10px;
+  margin: 0 10px;
 }
 
 #date {
-  padding: 8px 0px;
+  padding: 8px 0;
   flex: none;
   order: 2;
   flex-grow: 0;
-  margin: 0px 10px;
+  margin: 0 10px;
 }
 
 .tags-ul {
@@ -215,11 +214,11 @@ ul {
   align-items: center;
   list-style-type: none;
   gap: 8px;
-  padding: 0px;
+  padding: 0;
 }
 
 .html-tag {
-  background: #EBEBFF;
+  background: #ebebff;
   border-radius: 8px;
   padding: 4px 12px;
   width: 30px;
@@ -227,7 +226,7 @@ ul {
 }
 
 .css-tag {
-  background: #EBEBFF;
+  background: #ebebff;
   border-radius: 8px;
   padding: 4px 12px;
   width: 20px;
@@ -235,7 +234,7 @@ ul {
 }
 
 .javaScript-tag {
-  background: #EBEBFF;
+  background: #ebebff;
   border-radius: 8px;
   padding: 4px 12px;
   width: 66px;
@@ -245,7 +244,7 @@ ul {
 .project-btn {
   background-color: white;
   border-radius: 8px;
-  border: 1px solid #6070FF;
+  border: 1px solid #6070ff;
   color: blue;
   padding: 12px;
   font-weight: 700;
@@ -290,7 +289,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px;
+  padding: 0;
   gap: 12px;
   width: 327px;
   height: 409px;
@@ -310,8 +309,7 @@ ul {
   align-items: flex-start;
   list-style-type: none;
   gap: 8px;
-  padding: 0px;
-  list-style-type: none;
+  padding: 0;
 }
 
 .linkedin2 {
@@ -332,7 +330,7 @@ ul {
 .resume-btn {
   background-color: white;
   border-radius: 8px;
-  border: 1px solid #6070FF;
+  border: 1px solid #6070ff;
   color: blue;
   padding: 12px;
   font-weight: 700;
