--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700&display=swap");
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 .back-img {
   background-image: url('images/Background.png');
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  width: 100%;
+  width: 375px;
   height: 587.15px;
   top: 104px;
 }
@@ -14,7 +20,6 @@
   font-weight: bold;
   font-size: 25px;
   margin-bottom: 7%;
-  margin-left: 15px;
 }
 
 a {
@@ -24,7 +29,6 @@ a {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
@@ -49,7 +53,7 @@ body {
   height: 24px;
   background-color: transparent;
   top: 18px;
-  left: 408px;
+  left: 332px;
   border: none;
 }
 
@@ -61,7 +65,13 @@ body {
 .socials {
   margin-bottom: 15px;
   border: none;
-  background-color: white;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  width: 117px;
+  height: 24px;
+  color: #7F8CFF;
 }
 
 .socials-div {
@@ -85,13 +95,14 @@ ul {
   gap: 16px;
   width: 117px;
   height: 24px;
+  background-color: white;
 }
 
 .github {
   position: absolute;
-  left: 14%;
+  left: 7%;
   right: 57.07%;
-  top: 73%;
+  top: 565px;
   bottom: 18.87%;
   width: 25px;
   height: 25px;
@@ -100,8 +111,8 @@ ul {
 
 .gmail {
   position: absolute;
-  padding-left: 30px;
-  top: 74%;
+  padding-left: 0px;
+  top: 566px;
   bottom: 19.21%;
   width: 25px;
   height: 25px;
@@ -113,8 +124,8 @@ ul {
   width: 20px;
   padding-left: 55px;
   height: 20px;
-  left: 63px;
-  top: 73.4%;
+  left: 40px;
+  top: 564px;
   list-style-type: none;
 }
 
@@ -127,17 +138,17 @@ ul {
 }
 
 .work {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-row: auto;
   align-items: center;
+  background-color: whitesmoke;
   padding: 114px 24px;
   gap: 88px;
   position: absolute;
-  width: 426px;
+  width: 327px;
   height: 2788px;
-  left: 0;
+  left: 0px;
   top: 718px;
-  background-color: whitesmoke;
 }
 
 .tonic-1 {
@@ -199,6 +210,10 @@ ul {
   order: 1;
   flex-grow: 0;
   margin: 0 10px;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7A869A;
 }
 
 #date {
@@ -207,6 +222,10 @@ ul {
   order: 2;
   flex-grow: 0;
   margin: 0 10px;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7A869A;
 }
 
 .tags-ul {
@@ -220,32 +239,35 @@ ul {
 .html-tag {
   background: #ebebff;
   border-radius: 8px;
-  padding: 4px 12px;
-  width: 30px;
-  color: blue;
+  padding: 4px 5px 4px 10px;
+  width: 45px;
+  height: 24px;
+  color: #6070FF;
 }
 
 .css-tag {
   background: #ebebff;
   border-radius: 8px;
-  padding: 4px 12px;
-  width: 20px;
-  color: blue;
+  padding: 4px 0px 4px 10px;
+  width: 45px;
+  height: 24px;
+  color: #6070FF;
 }
 
 .javaScript-tag {
   background: #ebebff;
   border-radius: 8px;
-  padding: 4px 12px;
-  width: 66px;
-  color: blue;
+  padding: 4px 10px;
+  color: #6070FF;
+  width: 89px;
+  height: 24px;
 }
 
 .project-btn {
   background-color: white;
   border-radius: 8px;
   border: 1px solid #6070ff;
-  color: blue;
+  color: #6070FF;
   padding: 12px;
   font-weight: 700;
   width: 124px;
@@ -278,7 +300,7 @@ ul {
 
 .about-myself {
   position: absolute;
-  width: 474px;
+  width: 375px;
   height: 1263px;
   top: 3680px;
   border-top-right-radius: 60px;
@@ -327,16 +349,26 @@ ul {
   width: 30px;
 }
 
+.resume {
+  margin-right: 0px;
+}
+
 .resume-btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  color: #396DF2;
   background-color: white;
-  border-radius: 8px;
-  border: 1px solid #6070ff;
-  color: blue;
   padding: 12px;
-  font-weight: 700;
-  width: 124px;
+  gap: 10px;
+  width: 172px;
   height: 48px;
-  top: 20px;
+  border: 1px solid #6070FF;
+  border-radius: 8px;
 }
 
 .resume-btn:hover {
@@ -348,10 +380,24 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 15px;
+  padding: 0px;
   width: 327px;
-  height: 70px;
-  margin-top: 100px;
+  height: 464.15px;
+  margin-top: 220px;
+  margin-left: 20px;
+}
+
+.language {
+  position: absolute;
+  left: 12px;
+  right: 78px;
+  top: calc(50% - 24px/2);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  width: 327px;
+  height: 72px;
+  margin-left: 20px;
 }
 
 #skills {
@@ -371,4 +417,129 @@ option {
   padding-left: 15px;
   width: 327px;
   height: 70px;
+}
+
+.tonic-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  gap: 12px;
+  width: 327px;
+  height: 596px;
+  box-sizing: border-box;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+  background-color: white;
+}
+
+.vector-down {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  color: #5E6C84;
+  padding: 8px;
+  right: 26px;
+  top: 10px;
+}
+
+.lang-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 12px;
+  gap: 12px;
+  width: 327px;
+  height: 248.15px;
+  margin-top: 50px;
+  margin-left: 15px;
+}
+
+#lang {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 303px;
+  height: 66.72px;
+  background: #F7F7F9;
+  border-radius: 8px;
+  text-align: center;
+}
+
+#lang-txt {
+  position: absolute;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #253858;
+  margin-top: 23px;
+  text-align: left;
+  left: 95px;
+  right: 12px;
+}
+
+.lang-img-js {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  left: 35px;
+  border: 1px solid #FFFFFF;
+  background-image: url('images/JavaScript.png');
+  margin-top: 8px;
+}
+
+.lang-img-html {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  left: 35px;
+  border: 1px solid #FFFFFF;
+  background-image: url('images/HTML.png');
+  margin-top: 8px;
+}
+
+.lang-img-css {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  left: 35px;
+  border: 1px solid #FFFFFF;
+  background-image: url('images/CSS.png');
+  margin-top: 8px;
+}
+
+.framework {
+  position: absolute;
+  left: 12px;
+  right: 78px;
+  top: 73%;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  width: 327px;
+  height: 72px;
+  margin-left: 20px;
+}
+
+.skil {
+  position: absolute;
+  left: 12px;
+  right: 78px;
+  top: 79%;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  width: 327px;
+  height: 72px;
+  margin-left: 20px;
+}
+
+#sep-btn {
+  position: absolute;
+  height: 1px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  width: 327px;
+  background: #DFE1E6;
 }
