--- a/styles.css
+++ b/styles.css
@@ -231,36 +231,22 @@ ul {
 .tags-ul {
   display: flex;
   align-items: center;
+  float: inline-start;
   list-style-type: none;
   gap: 8px;
   padding: 0;
 }
 
-.html-tag {
+.tag {
+  float: left;
+  text-align: center;
   background: #ebebff;
   border-radius: 8px;
   padding: 4px 5px 4px 10px;
-  width: 45px;
+  width: auto;
   height: 24px;
   color: #6070ff;
-}
-
-.css-tag {
-  background: #ebebff;
-  border-radius: 8px;
-  padding: 4px 0 4px 10px;
-  width: 45px;
-  height: 24px;
-  color: #6070ff;
-}
-
-.javaScript-tag {
-  background: #ebebff;
-  border-radius: 8px;
-  padding: 4px 10px;
-  color: #6070ff;
-  width: 89px;
-  height: 24px;
+  margin: 0px 5px;
 }
 
 .project-btn {
