--- a/styles.css
+++ b/styles.css
@@ -538,12 +538,27 @@ option {
   align-items: center;
   flex-direction: column;
   position: absolute;
-  width: 100%;
   height: 779px;
   left: 0px;
   top: 4880px;
   background: #6070FF;
   border-top-left-radius: 70px;
+  width: 375px;
+}
+
+.form-action {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.text-area {
+  height: 170px;
+  outline: none;
+  width: 327px;
+  border: 1px solid #CFD8DC;
+  border-radius: 8px;
+  color: #172B4D;
 }
 
 .form-bg {
@@ -570,6 +585,7 @@ option {
   font-size: 20px;
   line-height: 28px;
   color: white;
+  border: none;
   padding: 0 8%;
   margin-top: -10%;
   text-align: center;
@@ -581,4 +597,15 @@ option {
   font-size: 40px;
   line-height: 52px;
   color: white;
+}
+
+.lable {
+  outline: none;
+  width: 327px;
+  border: 1px solid #CFD8DC;
+  border-radius: 8px;
+}
+
+::placeholder { 
+  color: #172B4D;
 }
