--- a/styles.css
+++ b/styles.css
@@ -609,3 +609,16 @@ option {
 ::placeholder { 
   color: #172B4D;
 }
+
+.submit-btn{
+  font-size: 17px;
+  height: 48px;
+  width: 140px;
+  left: 24px;
+  top: 5317px;
+  border-radius: 8px;
+  padding: 12px 16px 12px 16px;
+  color: #6070FF;
+  border: none;
+
+}
