--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 * {
   font-family: "Poppins", sans-serif;
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .back-img {
@@ -151,7 +151,7 @@ ul {
   right: 0;
   left: 0;
   top: 718px;
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .tonic-1 {
@@ -249,7 +249,7 @@ ul {
   width: auto;
   height: 24px;
   color: #6070ff;
-  margin: 0px 5px;
+  margin: 0 5px;
 }
 
 .project-btn {
@@ -539,9 +539,9 @@ option {
   flex-direction: column;
   position: absolute;
   height: 779px;
-  left: 0px;
+  left: 0;
   top: 4880px;
-  background: #6070FF;
+  background: #6070ff;
   border-top-left-radius: 70px;
   width: 375px;
 }
@@ -556,9 +556,9 @@ option {
   height: 170px;
   outline: none;
   width: 327px;
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
-  color: #172B4D;
+  color: #172b4d;
 }
 
 .form-bg {
@@ -602,15 +602,15 @@ option {
 .lable {
   outline: none;
   width: 327px;
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
 }
 
-::placeholder { 
-  color: #172B4D;
+::placeholder {
+  color: #172b4d;
 }
 
-.submit-btn{
+.submit-btn {
   font-size: 17px;
   height: 48px;
   width: 140px;
@@ -618,7 +618,6 @@ option {
   top: 5317px;
   border-radius: 8px;
   padding: 12px 16px 12px 16px;
-  color: #6070FF;
+  color: #6070ff;
   border: none;
-
 }
