--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,59 @@
 }
 
 .back-img {
-  background-image: url('images/Background.png');
+  background-image: url('images/desktop-bg.png');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   position: absolute;
-  width: 375px;
-  height: 587.15px;
+  min-width: 97%;
+  height: 100%;
   top: 104px;
+  left: 3%;
 }
 
-.toolbar {
+.toolbar-txt {
   display: flex;
   color: slateblue;
-  font-weight: bold;
-  font-size: 25px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
   margin-bottom: 7%;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 12px;
+  margin-left: 10%;
+  margin-top: 15px;
+  width: 100px;
+}
+
+.item-txt {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #344563;
+}
+.toolbar {
+  position: absolute;
+  width: 100%;
+  height: 72px;
+  left: 0px;
+  top: 0px;
+}
+
+.intro{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+  position: absolute;
+  width: 55%;
+  height: 268px;
+  left: 20%;
+  top: calc(50% - 600px/2);
 }
 
 a {
@@ -31,6 +69,37 @@ a {
 
 body {
   margin: 0;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: row;
+  width: 20%;
+  height: 30px;
+}
+
+.link-in {
+  display: flex;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 2%;
+}
+
+.link-gmail {
+  display: flex;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 6%;
+}
+
+.link-git {
+  display: flex;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 10%;
 }
 
 .greeting {
@@ -48,19 +117,160 @@ body {
   margin-left: 15px;
 }
 
+.work {
+  display: grid;
+  grid-row: auto;
+  align-items: center;
+  background-color: whitesmoke;
+  padding: 114px 24px;
+  gap: 88px;
+  position: absolute;
+  width: 95.5%;
+  height: 2788px;
+  right: 0;
+  left: 0;
+  top: 1018px;
+  margin-right: 0;
+}
+
+.item-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 8px;
+  position: absolute;
+  width: 259px;
+  height: 40px;
+  left: 75%;
+  top: 16px;
+}
+
 .btn {
   position: absolute;
   width: 24px;
   height: 24px;
   background-color: transparent;
   top: 18px;
-  left: 332px;
+  left: 85%;
   border: none;
+  visibility: hidden;
 }
 
-.btn:hover {
-  enable-background: white;
-  background-color: slateblue;
+@media (max-width: 800px) {
+  .back-img {
+    background-image: url('images/Background.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    width: 100%;
+    height: 85%;
+    top: 104px;
+    left: 0;
+  }
+
+  .toolbar-txt {
+    display: flex;
+    color: slateblue;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    margin-bottom: 7%;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 12px;
+    margin-left: 3%;
+    margin-top: 15px;
+  }
+
+  .intro{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 114px 24px;
+    gap: 12px;
+    position: absolute;
+    width: 375px;
+    height: 604px;
+    left: calc(50% - 105%/2);
+    top: 92px;
+  }
+
+  .link-in {
+    display: flex;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 10%;
+  }
+  
+  .link-gmail {
+    display: flex;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 19%;
+  }
+  
+  .link-git {
+    display: flex;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 29%;
+  }
+
+  .work {
+    display: grid;
+    grid-row: auto;
+    align-items: center;
+    background-color: whitesmoke;
+    padding: 114px 24px;
+    gap: 88px;
+    position: absolute;
+    width: 91.9%;
+    height: 2788px;
+    right: 0;
+    left: 0;
+    top: 1018px;
+    margin-right: 0;
+  }
+  .item-nav {
+    background-image: url('images/Icon - Menu.png');
+    background-repeat: no-repeat;
+    padding: 8px;
+    position: absolute;
+    width: 30px;
+    height: 40px;
+    right: 24px;
+    left: 85%;
+    top: 30%;
+  }
+
+  .item-txt {
+    visibility: hidden;
+    left: 2%;
+    width: 0px;
+    height: 0px;
+
+  }
+
+  .btn {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    top: 18px;
+    left: 85%;
+    border: none;
+  }
+  
+  .btn:hover {
+    enable-background: white;
+    background-color: slateblue;
+  }
 }
 
 .socials {
@@ -86,72 +296,6 @@ body {
 
 ul {
   border: none;
-}
-
-.social-media {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0;
-  gap: 16px;
-  width: 117px;
-  height: 24px;
-  background-color: white;
-}
-
-.github {
-  position: absolute;
-  left: 7%;
-  right: 57.07%;
-  top: 565px;
-  bottom: 18.87%;
-  width: 25px;
-  height: 25px;
-  list-style-type: none;
-}
-
-.gmail {
-  position: absolute;
-  padding-left: 0;
-  top: 566px;
-  bottom: 19.21%;
-  width: 25px;
-  height: 25px;
-  list-style-type: none;
-}
-
-.linkedin {
-  position: absolute;
-  width: 20px;
-  padding-left: 55px;
-  height: 20px;
-  left: 40px;
-  top: 564px;
-  list-style-type: none;
-}
-
-.toolbar-img {
-  background-image: url('images/Toolbar.png');
-  background-repeat: no-repeat;
-  width: 470px;
-  height: 50px;
-  background-size: cover;
-}
-
-.work {
-  display: grid;
-  grid-row: auto;
-  align-items: center;
-  background-color: whitesmoke;
-  padding: 114px 24px;
-  gap: 88px;
-  position: absolute;
-  width: 327px;
-  height: 2788px;
-  right: 0;
-  left: 0;
-  top: 718px;
-  margin-right: 0;
 }
 
 .tonic-1 {
